--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "eslint-loader": "^4.0.2",
     "firebase": "^7.24.0",
     "fuse.js": "^6.4.1",
     "normalize.css": "^8.0.1",
